<resources>
    <string name="app_name">Экономный кошелёк</string>
    <string name="add">Добавить</string>
    <string name="amount">Сумма</string>
    <string name="shop">Магазин</string>
    <string name="category">Категория</string>
    <string name="date">Дата</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="balance">Баланс</string>
    <string name="budget">Бюджет</string>
    <string name="total_expenses">Расходы</string>
    <string name="statistics">Статистика</string>
    <string name="transactions">Операции</string>
    <string name="delete">Удалить</string>
    <string name="advice">Совет</string>
    <string name="shop_stats">Траты по магазинам</string>
</resources>
